# aoc-2025

./: .env  Cargo.toml  README.md
__ref__/day-1/src/: main_a.rs  main_b.rs
__ref__/day-2/: Cargo.toml
__ref__/day-2/src/: main_a.rs  main_b.rs
__ref__/day-3/: Cargo.toml
__ref__/day-3/src/: main_a.rs  main_b.rs
__ref__/day-4/: Cargo.toml
__ref__/day-4/src/: main_a.rs  main_b.rs
__ref__/day-5/: Cargo.toml
__ref__/day-5/src/: main_a.rs
day-1/: Cargo.toml
day-1/src/: main_a.rs  main_b.rs
utils/src/: lib.rs
