[package]
name = "day-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
regex = "1.10.2"

[[bin]]
name = "day-3-a"
path = "src/main_a.rs"

[[bin]]
name = "day-3-b"
path = "src/main_b.rs"
